# uav-nav-lab

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: findings.md
examples/: exp_3d.yaml  exp_3d_compare_chomp.yaml  exp_3d_compare_chomp_rrt.yaml  exp_3d_compare_mpc.yaml  exp_3d_compare_rrt.yaml  exp_3d_mpc.yaml  exp_3d_predictive.yaml  exp_ablate_sensor_depth.yaml  exp_ablate_sensor_pointcloud.yaml  exp_airsim.yaml  exp_airsim_demo.yaml  exp_airsim_latency.yaml  exp_airsim_multi_demo.yaml  exp_airsim_wind.yaml  exp_basic.yaml  exp_compare_astar.yaml  exp_compare_chomp.yaml  exp_compare_chomp_rrt.yaml  exp_compare_mpc.yaml  exp_compare_mpc_chomp.yaml  exp_compare_mpc_chomp_vprofile.yaml  exp_compare_mpc_smooth.yaml  exp_compare_mppi.yaml  exp_compare_mppi_3d.yaml  exp_compare_rrt.yaml  exp_compare_rrt_star.yaml  exp_compare_straight.yaml  exp_dummy_latency.yaml  exp_dummy_mpc_latency.yaml  exp_dynamic.yaml  exp_gpu_mppi_pareto.yaml  exp_lidar.yaml  exp_mpc.yaml  exp_multi_drone.yaml  exp_multi_drone_2.yaml  exp_multi_drone_3.yaml  exp_multi_drone_3d_2.yaml  exp_multi_drone_3d_3.yaml  exp_multi_drone_3d_4.yaml  exp_multi_drone_3d_4_dense.yaml  (+14 more)
scripts/: record_airsim_demo.py  record_airsim_multi_demo.py  record_airsim_topdown.py  ros2_dummy_sim.py  train_lstm_predictor.py  train_rl_baseline.py
tests/: test_smoke.py
uav_nav_lab/: __init__.py  anim.py  cli.py  config.py  recorder.py  registry.py  sweep_viz.py  video.py  viz.py
uav_nav_lab/eval/: __init__.py  compare.py  metrics.py
uav_nav_lab/planner/: __init__.py  _grid.py  (+10 more)
(+31 files in other folders)
