[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-nav-lab"
version = "0.1.0"
description = "High-speed UAV navigation research framework on top of AirSim / PX4 / ROS2."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "uav-nav-lab contributors" }]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]
viz = ["matplotlib>=3.7"]

[project.scripts]
uav-nav = "uav_nav_lab.cli:main"

[tool.setuptools.packages.find]
include = ["uav_nav_lab*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
